Revert "[NWPS-1226] - Fixing label wrapping for featured content"
This reverts commit 117c4240614a18405c609cbb42e414f807321aa4.

--- a/app/assets/hee/blocks/furniture/collections/hee-listing-item/_listing-item.scss
+++ b/app/assets/hee/blocks/furniture/collections/hee-listing-item/_listing-item.scss
@@ -9,7 +9,7 @@
     margin-bottom: map-get($nhsuk-spacing-points, 2);
 
     span {
-      display: block;
+      display: inline-block;
 
       &.hee-listing-item__details__label {
         font-weight: $nhsuk-font-bold;
